cluster/gitops/networking/vpn/router/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-router
specs:
  - description: vpn-router
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: vpn-router
        app.kubernetes.io/instance: vpn-router
    ingress:
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9090"
                protocol: TCP
